# darwis-taxii

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  taxii.example.toml
stix2/: Cargo.toml  README.md
stix2/src/: canonicalization.rs  custom.rs  environment.rs  equivalence.rs  graph.rs  lib.rs  pattern_equivalence.rs  registry.rs  v20.rs  versioning.rs  workbench.rs
stix2/src/core/: bundle.rs  common.rs  error.rs  external_reference.rs  id.rs  kill_chain_phase.rs  mod.rs  stix_object.rs  timestamp.rs  traits.rs
stix2/src/datastore/: composite.rs  filesystem.rs  filter.rs  memory.rs  mod.rs  taxii.rs
stix2/src/extensions/: mod.rs
stix2/src/markings/: mod.rs  operations.rs
stix2/src/objects/: attack_pattern.rs  campaign.rs  course_of_action.rs  grouping.rs  identity.rs  incident.rs  indicator.rs  infrastructure.rs  intrusion_set.rs  language_content.rs  location.rs  malware.rs  malware_analysis.rs  mod.rs  note.rs  observed_data.rs  opinion.rs  report.rs  threat_actor.rs  tool.rs  vulnerability.rs
stix2/src/observables/: artifact.rs  autonomous_system.rs  common.rs  directory.rs  domain_name.rs  email_address.rs  email_message.rs  file.rs  ipv4_address.rs  ipv6_address.rs  mac_address.rs  mod.rs  mutex.rs  network_traffic.rs  process.rs  software.rs  url.rs  user_account.rs  windows_registry_key.rs  x509_certificate.rs
stix2/src/patterns/: mod.rs  parser.rs  types.rs
stix2/src/relationship/: core.rs  mod.rs  sighting.rs
stix2/src/utils/: mod.rs
stix2/src/validation/: constraints.rs  context.rs  macros.rs  mod.rs  properties.rs
stix2/src/vocab/: mod.rs
taxii-1x/: Cargo.toml
taxii-1x/src/: constants.rs  error.rs  http.rs  lib.rs
taxii-1x/src/handlers/: base.rs  collection_info.rs  discovery.rs  inbox.rs  mod.rs  poll.rs  poll_fulfillment.rs  subscription.rs
taxii-1x/src/messages/: common.rs  messages_10.rs  messages_11.rs  mod.rs
taxii-2x/: Cargo.toml
taxii-2x/src/: error.rs  http.rs  lib.rs  responses.rs  state.rs  validation.rs
taxii-2x/src/handlers/: collections.rs  discovery.rs  mod.rs  objects.rs
taxii-auth/: Cargo.toml
taxii-auth/src/: error.rs  lib.rs  password.rs
taxii-cli/: Cargo.toml
taxii-cli/src/: main.rs
taxii-cli/src/commands/: account.rs  activity.rs  migrate.rs  mod.rs  persistence.rs  taxii2.rs
taxii-core/: Cargo.toml
taxii-core/src/: config.rs  error.rs  lib.rs  signals.rs
taxii-core/src/entities/: mod.rs  taxii1.rs  taxii2.rs
taxii-db/: Cargo.toml
taxii-db/.sqlx/: query-0346e202f2ddd8f2fc5adf3d6933bbab248eeab8e3203e9422d90a021e759bd6.json  query-042f51d4c814b0c3ea2e74f8747c9c80751cdc9237fe053be8ef871939d3ca55.json  query-044a9e622adeab636865624cb953a6bcd99327622fb9eaaf2a18ab3cd8bbf099.json  query-04b56175d55a2b24de7b954d5f52330382fe2768f49ecdd80c4fbff8c162cccc.json  query-0adc59b90ef742c7d2b959b338c185750d7697ed66a93fab1e48e1779951e7c8.json  query-0f4a347e80087c9c7e994e7995f77fc320286c27a5125a78d5cfa3adca5f0839.json  query-10847ba5da7da668ca3373c88d65f8b1d79ca243fe1ab7affdaf352f1b630ab9.json  query-150cfe03b7d127ae382836beea69a9a8b7418a63948412ff1ed5425450af398b.json  query-207b18197d6ec8c7bb31d1469607d231b9171e69f428dd05307f1b3481cc024e.json  query-21b4e8da18ba154d7c36f70b6919f301d87c08e435c058de302f62dd807d78f2.json  query-23d307f90aaf9c0d2c5990a5863c2d734b5de974ff73849dc7508fab6f11a0ce.json  query-24343c1c77849f25cee7d422ee34e211d56ba073f986810ca95f345a2811240b.json  query-2518531a043829bb158a55c0c85e08ae8b44f977bc22726f28a6bbb98c4d4252.json  query-2813e53185735d0295e67d9864db5cf881c57576c7089869265d07db5da85ffe.json  query-2b1d35128377bd27283b811d56e0681c135b01a5bf443016346f9e8a711d90dc.json  query-2b491e26dd7c5bf47bcc25018bce76f4a4c492d4e53bec7e6b906744a268ba58.json  query-3055bbab8759d1d5a920c528249aa0568b0aaa4bf742308a4b68b180a8d2df2e.json  query-30896ad766391a6cfb82f3f68c7e03abd013a75a1e20ba44b3b2c9573fc72038.json  query-30e2837598c8fcacfe1e8e9676e4da5572067b9118d152bcdf29eaf02d007d66.json  query-325d8b0c2f425abfb51c7dcd7dbdf0281cf6ab9f2ecbca0d51b37fa8a5248022.json  query-337842e59e594be5929e6c6cdd9bc936f857b05ce9b95ed6a5d97a91f610c9d1.json  query-34651d38aaa6a304292b14be8684f6119b7f56d810837af41e864501080a9a74.json  query-3f2844c497cb35396441a5c1a43fe04da69c65cfbef0b61a3e857f90d9b8bd9d.json  query-4270f18e63b90b3bcec272a3b41a74fa73294b5055768bcda7bf5c04fbfe7946.json  query-42ec18cda1ffd4bb5066b1f853bedc293dc3465d9e650ec89187989df4e2c583.json  query-4362f7210848764c10a3cd5747cea50bf94dda7bbbb4d5b5a053c27580595874.json  query-4750cfc48e02716c108d2a47935b479d3141a4e25acb7d445fa3ef4b0f505df6.json  query-4e29d68929a462bd2f21ec8f58240dfc581198a80b8549abdaeca4f190888ff9.json  query-513abcf9e0e917a847fbbbf60b9b21dab1e9fdda6167d74468a25a770fd6565f.json  query-5471ccd1606c9544038de1fb976063fecca84d9f4f4442320439a4cf68bb4f87.json  query-605c15c2192a58b994b32bb963b22ffe5165f64ccac14ca6a21803032ac05df2.json  query-65099187729ea3d34a1661d26d8350ab8385df8177dd75e39ea91346b37c9fbc.json  query-6515ee4b7f8ea20d77a74c8e110e2a4dffd2a9d7a20bcf3efb8718e630506423.json  query-66000d94c53197f5908690c1aa83665a0519a56a671e457aac342687a84cba56.json  query-6a1735093cdfbd54f401aa3354a8c03240ab5d1196ff8d36e959f72a7aef4960.json  query-6e5a43c176b349f5de404e43f575d36a56355eb14e085ed412660a650b50c019.json  query-72cfcc10153a40aef5bd413cdfb3e70d9c1539563675399e1a71ae1c86584414.json  query-7620ab4add48370bf3f433ab07fe45029730cf7b38ea7194db29ab254a75975d.json  query-7de3dd246bb4e261a0a6c7a18d74857b5ed2bac47c179d43e13cc71d8f1976d2.json  query-85a8e582d7ba13a3feaf76fa64f1da2dea44a5cc8d21852ff764fddfe91d843d.json  (+38 more)
taxii-db/src/: error.rs  lib.rs  manager.rs  migrations.rs  pool.rs
taxii-db/src/models/: account.rs  account_activity.rs  mod.rs
taxii-db/src/models/taxii1/: collection.rs  content_block.rs  inbox_message.rs  mod.rs  result_set.rs  (+2 more)
taxii-db/src/repository/: conversions.rs  mod.rs  taxii1.rs  taxii2.rs  traits.rs
taxii-server/: Cargo.toml
taxii-server/examples/: hooks.rs
taxii-server/src/: auth_middleware.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  taxii1x_routes.rs
(+36 files in other folders)
