[package]
name = "stix2"
version = "0.1.1"
edition = "2024"
authors.workspace = true
homepage.workspace = true
description = "A Rust implementation of STIX 2.1 (Structured Threat Information Expression)"
license.workspace = true
repository = "https://github.com/CSPF-Founder/darwis-taxii"
readme = "README.md"
keywords = ["stix", "cti", "threat-intelligence", "cybersecurity", "taxii"]
categories = ["data-structures", "encoding", "parser-implementations"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.15"

# UUID handling
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for pattern matching
regex = "1.12"

# Lazy static for global registries
once_cell = "1.21"

# Error handling
thiserror = "2.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# URL parsing
url = { version = "2.5", features = ["serde"] }

# Base64 encoding/decoding
base64 = "0.22"

# Hex encoding/decoding
hex = "0.4"

# IP address handling
ipnetwork = "0.21"

# Hash algorithms for canonicalization
sha2 = "0.10"
md-5 = "0.10"

# Pattern parsing (parser combinators)
nom = "8.0"

# Indexmap for ordered maps
indexmap = { version = "2.11", features = ["serde"] }

# Derive more traits
derive_more = { version = "1.0", features = ["display", "from", "into", "deref"] }

# For async datastore operations (optional)
tokio = { version = "1.48", features = ["fs", "io-util"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
criterion = "0.5"
tokio-test = "0.4"

[features]
default = []
async = ["tokio", "reqwest"]
taxii = ["async"]

[lib]
name = "stix2"
path = "src/lib.rs"

[lints]
workspace = true
