[package]
name = "taxii-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core domain entities, configuration, and error types for TAXII server"
publish = false

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
config.workspace = true
toml.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
stix2.workspace = true
